fixing tooltip overlap issue

--- a/src/jv.css
+++ b/src/jv.css
@@ -220,6 +220,7 @@ svg:focus {
 
 .jv-tip-content {
     display: inline-block;
+    width: 100%;
 }
 
 
